<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">GoGrab Driver App</string>
    <string name="google_map_key" translatable="false">google_map_key_here</string>
    <string name="google_web_client_id" translatable="false">google_web_client_id_from_google_api_console</string>
    <string name="facebook_app_id" translatable="false">facebook_app_id</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb(facebook_app_id)</string>
   <string name="facebook_client_token" translatable="false">facebook_client_token</string>
    <string name="slide_to_cancel"><font size="5">Slide to Cancel</font></string>
    <string name="something_went_wrong">Something went wrong our team working on it</string>
    <string name="image_saved">Image saved</string>
    <string name="click_again">Click Again</string>
    <string name="your_message">Your Message</string>
    <string name="sent">Sent</string>
    <string name="seen_at">Seen at</string>
    <string name="not_delivered">Not delivered.</string>
    <string name="this_message_was_deleted">This message was deleted</string>
    <string name="support">Support</string>
    <string name="type_your_message_here">Type Your Message Here ..</string>
    <string name="copy">Copy</string>
    <string name="delete_this_message">Delete this message</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo_from_gallery">Choose Photo from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="tap_again">Tap Again To Exit</string>
    <string name="camera_denied">camera permission denied</string>
    <string name="not_found">Not found</string>
    <string name="cant_empty">Can\'t empty</string>
    <string name="blank_space_empty">Blank spaces can\'t allow</string>
    <string name="invalid_phone_no">Invalid phone number format</string>
    <string name="resend_number_code">Resend Code 00:</string>
    <string name="resend_code">Resend Code</string>
    <string name="you_are_online">You are Online</string>
    <string name="alert">Alert</string>
    <string name="are_you_sure_to_offline">Are you sure you want to offline?</string>
    <string name="are_you_sure_to_online">Are you sure you want to online?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="permission_denied">permission denied</string>
    <string name="location_are_inadequate">Location settings are inadequate, and cannot be fixed here. Fix in Settings.</string>
    <string name="dummy_name">Jhon Alex</string>
    <string name="dummy_email">jhonalex@hotmail.com</string>
    <string name="home">Home</string>
    <string name="my_jobs">My Jobs</string>
    <string name="wallet">Wallet</string>
    <string name="manage_vehicle">Manage Vehicle</string>
    <string name="withdraw">Withdraw</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="version">Version</string>
    <string name="for_effort_less_delivery">For Effortless Delivery</string>
    <string name="allow_us_to_access_your_location">Allow us to access your location\nfor pickup/dropoff location for delivery</string>
    <string name="yes_allow">Yes, Allow</string>
    <string name="logout_status">Logout Status</string>
    <string name="are_you_sure">Are you sure to want logout ?</string>
    <string name="current_balance">Current Balance</string>
    <string name="bank_info">Bank Info</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="name_dot">Name: </string>
    <string name="dummy_name_two">Alex Smith</string>
    <string name="Bank">Bank</string>
    <string name="iban">IBAN</string>
    <string name="account_number">Account Number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_condition"><![CDATA[Terms & Condition]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="support_email">Support@system.com</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="invalid_password">Password must be between 8–20 digit !</string>
    <string name="new_password_must_differ">New password must be different</string>
    <string name="password_must_match">Confirm password must be match</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="tap_to_select">Tab to select</string>
    <string name="search_app_hint">Search …</string>
    <string name="no_city_found">No city found</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_country">Select Country</string>
    <string name="okay">OK</string>
    <string name="select_anyone_for_proceed">Select anyone for proceed</string>
    <string name="verhicle_type">Vehicle Type</string>
    <string name="manufacture">Manufacture</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="license_plate">License Plate</string>
    <string name="color">Color</string>
    <string name="documents">Documents</string>
    <string name="driving_license">Driving License</string>
    <string name="vehicle_insurance">Vehicle Insurance</string>
    <string name="vehicle_registration">Vehicle Registration</string>
    <string name="national_id_passport">National ID/ Passport</string>
    <string name="approved">Approved</string>
    <string name="pending">Pending</string>
    <string name="uplaod_document">Upload Documents</string>
    <string name="we_need_to_see_your_name_clearly">We need to see your name clearly printed \non an official document.</string>
    <string name="add_a_file">Add a file</string>
    <string name="select_image_from">Select Image From</string>
    <string name="submit_for_review">Submit For Review</string>
    <string name="select_any_document_first">Select please any document first</string>
    <string name="no_job_found">No job found</string>
    <string name="dumm_pick_time">12:30 AM PAST</string>
    <string name="dummy_pickup_location">8502 Preston Rd.</string>
    <string name="dumm_time">1H 0M</string>
    <string name="dummy_date">Today, 3:45 PM</string>
    <string name="dummy_fare">$ 24.30</string>
    <string name="dummy_pickup_detail">Neon Cafe, 23/A Park Avenue</string>
    <string name="dummy_dropoff_detail">Rex House, 769 Isadore</string>
    <string name="earning">Earnings</string>
    <string name="total_earning">Total Earnings</string>
    <string name="completed_rides">Completed Rides</string>
    <string name="latest_ride">Latest Ride</string>
    <string name="recent_rides">Recent Rides</string>
    <string name="log_in_to_driver_app">Log in to Driver App</string>
    <string name="manage_your_account_check_notification_and_more">Manage your account, check notification, and more</string>
    <string name="user_phone_email_user_name">Use phone / Email / Username</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="facebook_login_cancel">Facebook login cancel</string>
    <string name="enter_your_phone_no">Enter Phone Number</string>
    <string name="please_confirm_your_country_code_and_enter_your_phone_number">We\'ll send an SMS with a verification code, SMS fees my apply.</string>
    <string name="please_confirm_your_email_your_email">We\'ll send an email with a verification code, emial fees my apply.</string>
    <string name="use_8_20_characters_from_at_least_2_categories_letters_numbers_special_characters">Use 8–20 characters from at least 2 categories: letters, numbers, special characters</string>
    <string name="you_can_always_change_the_username_later">You can always change the username later</string>
    <string name="you_can_always_change_the_fullname_later">You can always change the full name later</string>
    <string name="forgot_password_description">Enter the email address you signed up with we\'ll send you an email that will let you choose another password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="dummy_number">Phone Number</string>
    <string name="plus_92">+92</string>
    <string name="send_code">Send Code</string>
    <string name="enter_digit_code">Enter 4-digit code</string>
    <string name="check_your_sms_message_we_ve">Check your sms message we\'ve sent you\nverification code at</string>
    <string name="check_your_sms_message_we_have">Check your sms message we\'ve sent you\nverification code at +923210000001</string>
    <string name="resend_sode_time">Resend code : </string>
    <string name="what_your_emai">What\'s your email?</string>
    <string name="check_your_email_we_ve">Check your email we\'ve sent you verification code at</string>
    <string name="next">Next</string>
    <string name="create_password">Create password</string>
    <string name="create_username">Create Username</string>
    <string name="invalid_email">Email format is invalid</string>
    <string name="phone">Phone</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="change_your_password">Change your password</string>
    <string name="terms_and_condition_detail">By continuing, you agree to GoGrab Terms of Use \nand confirm that you have read GoGrab Privacy Policy.</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="make_sure_check_your_internet">Make sure your Wifi or data is enable\nTurn on mobile data or Wifi</string>
    <string name="you_ll_need_to_enable_your_location_n_in_order_to_use_binder">Enable your location to start find the \n request around you</string>
    <string name="try_again">Try Again</string>
    <string name="allow_location">Enable Location</string>
    <string name="enable_your_loaction">Enable Your Location</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="congrats_booking_confirm">Congrats! Booking confirmed.</string>
    <string name="you_have_to_arrive_at">You have to arrive at</string>
    <string name="pickup_location_">Pickup location :</string>
    <string name="arrived_for_pickup">Arrived For Pickup</string>
    <string name="start_trip">Start Trip</string>
    <string name="end_trip">End Trip</string>
    <string name="picking_up">Picking Up</string>
    <string name="picked">Picked</string>
    <string name="dropoff">Dropoff</string>
    <string name="other">Other</string>
    <string name="how_much_cash_have_you_received">How much cash have you received?</string>
    <string name="thank_you">Thank you</string>
    <string name="done">Done</string>
    <string name="how_was_your_last_ride_with">How was your last ride with</string>
    <string name="dropoff_location">Dropoff location</string>
    <string name="map_it">Map it</string>
    <string name="items">Item Name</string>
    <string name="parcel">Delivery</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="etName">Name<font color='#EF716B'> *</font></string>
    <string name="etPhoneNumber">Phone number<font color='#EF716B'> *</font></string>
</resources>